frontend/app/src/core/alert/components/Alert.module.css
.alert {
    width: auto;
    float: right;
    min-width: 250px;
    pointer-events: initial;
}

.alertRow {
    width: 100%;
}

.alertsHolder {
    width: 100%;
    display: flex;
    position: absolute;
    padding: 20px;
    z-index: 2000;
    flex-wrap: wrap;
    top: 100px;
    pointer-events: none;
}

